# cake

./: .gitignore  Cargo.toml  Justfile  README.md  build.rs
crates/cake/: Cargo.toml
crates/cake-bin/: Cargo.toml
crates/cake-lex/: Cargo.toml
crates/cake-lex/src/: alphabet.rs  fa.rs  fa_tests.rs  lexemes.rs  lib.rs  regex.rs  table_scanner.rs
crates/cake-re/: Cargo.toml
crates/cake-re/src/: fa.rs  fa_tests.rs  lexeme_def.rs  lib.rs  regex.rs
crates/cake-util/: Cargo.toml
crates/cake-util/src/: lib.rs
crates/cake/src/: lib.rs
crates/cake/src/cir/: README.md  ast2cir.rs  mod.rs
crates/cake/src/codegen/: asm.rs  cranelift_backend.rs  layout.rs  mod.rs
crates/cake/src/codegen/cir_backend/: mod.rs
crates/cake/src/codegen/cranelift_backend/: mod.rs  tests.rs
crates/cake/src/codegen/cranelift_backend/test_data/: array.c  array.out  augmented_assignment.c  augmented_assignment.out  calculator.c  compile_expr.c  compile_function_call.c  compile_string_literal.c  compile_variables.c  complicated_conditional.c  conditional.c  conditional.out  continue_break.c  continue_break.out  fib.c  fib.out  for_loop.c  globals.c  globals.out  initializer.c  multi_array.c  nested_continue.c  nested_continue.out  short_circuit.c  short_circuit.out  sizeof.c  sizeof.out  struct.c  struct.out  struct_assign.c  struct_assign.out  struct_param.c  struct_param.out  struct_return.c  struct_return.out  switch.c  union_punning.c  union_punning.out  varargs_call.c  varargs_call.out  (+2 more)
crates/cake/src/elf/: elf.rs  mod.rs
crates/cake/src/parser/: ast.rs  earley.rs  grammar.rs  hand_parser.rs  lr.rs  mod.rs
crates/cake/src/parser/grammars/: expression.def  metagrammar-output.rs
crates/cake/src/parser/hand_parser/: hand_parser_tests.rs  mod.rs
crates/cake/src/platform/: mod.rs
crates/cake/src/scanner/: fa.rs  lexemes.rs  mod.rs  scanner_tests.rs  table_scanner.rs
crates/cake/src/scanner/lexeme_sets/: .gitignore
crates/cake/src/scanner/lexeme_sets/defs/: c_lexemes.def  c_preprocessor.def
crates/cake/src/scanner/preprocessor/: mod.rs
crates/cake/src/scanner/preprocessor/preprocessor_tests/: .gitignore  basic_macro.c  conditional_inclusion.c  mod.rs  remove_comments.c
crates/cake/src/scanner/preprocessor_tests/: basic_include.c  basic_include.h  mod.rs
crates/cake/src/semantics/: constexpr.rs  mod.rs  resolve_ast.rs  resolved_ast.rs  symtab.rs  types.rs
crates/cake/src/semantics/resolve_ast/: mod.rs  resolve_decls.rs  resolve_exprs.rs
crates/cake/src/semantics/resolver/: mod.rs  resolve_decls.rs  resolve_exprs.rs
crates/cake/src/types/: layout.rs  mod.rs
crates/cake/tests/: bnf_tests.rs  earley_tests.rs  fa_tests.rs  scanner_tests.rs
crates/cake/tests/integration/: .gitignore
crates/cake/tests/linker_tests/: Makefile
data/lexeme_sets/: .gitignore  Makefile  c_lexemes.def  expressions.def
data/test_programs/: hello_world.c
src/: lib.rs  main.rs
src/interpreter/: mod.rs
src/linker/: elf.rs
src/parser/: ast.rs  c_grammar  earley.rs  grammar.rs  hand_parser.rs  mod.rs
src/parser/grammars/: c_grammar.def  ebnf.def  expression.def
src/scanner/: fa.rs  lexemes.rs  mod.rs  regex.rs  table_scanner.rs
src/scanner/lexeme_sets/: .gitignore  c_lexemes.rs  ebnf.rs  expressions.rs  mod.rs  simple.rs
src/scanner/lexeme_sets/defs/: c_lexemes.def  ebnf.def  simple.def
src/semantics/: mod.rs  symtab.rs  types.rs
tests/: bnf_tests.rs  earley_tests.rs  fa_tests.rs
tests/linker_tests/: test
