[workspace]
members = [
    "crates/cake",
    "crates/cake-bin",
    "crates/cake-re",
    "crates/cake-util"
]
resolver = "2"

[workspace.dependencies]
bitflags = "2.6.0"
byteorder = "1.5.0"
petgraph = "0.6.4"
thiserror = "1.0.63"
bumpalo = { version = "3.16.0", features = ["collections"] }
clap = "4.5.16"
bit-set = "0.8.0"
serde = "1.0.204"
serde-binary = "0.5.0"
convert_case = "0.6.0"
anyhow = "1.0.86"
codegen = "0.1.3"
glob = "0.3.1"
cranelift = { version = "0.120.0", features = ["object", "module", "native"] }
paste = "1.0.15"

[workspace.dependencies.iced-x86] 
    version = "1.21.0" 
    # only need encoding capabilities
    default-features = false 
    features = ["encoder", "block_encoder", "op_code_info", "instr_info", "code_asm", "std"]
