[package]
name = "cake-re"
version = "0.1.0"
edition = "2021"

[dependencies]
bit-set = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-binary = { workspace = true }
cake-util = { path = "../cake-util" }
thiserror = { workspace = true }
convert_case = { workspace = true }