[package]
name = "cake"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
bitflags = "2.6.0"
byteorder = "1.5.0"
petgraph = "0.6.4"
cake-re = { path = "../cake-re" }
cake-util = { path = "../cake-util" }
thiserror = "1.0.63"
bumpalo = "3.16.0"

[build-dependencies]
codegen = "0.1.3"
glob = "0.3.1"
convert_case = "0.6.0"
cake-re = { path = "../cake-re" }
anyhow = "1.0.86"
lazy_static = "1.5.0"
