[package]
name = "cake"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = { workspace = true }
bitflags = { workspace = true }
byteorder = { workspace = true }
petgraph = { workspace = true }
cake-re = { path = "../cake-re" }
cake-util = { path = "../cake-util" }
thiserror = { workspace = true }
bumpalo = { workspace = true }
cranelift = { workspace = true}

[build-dependencies]
codegen = { workspace = true }
glob = { workspace = true }
convert_case = { workspace = true }
cake-re = { path = "../cake-re" }
anyhow = { workspace = true }
